k8s/redis/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  ports:
    - port: 6379
      name: redis-port
  type: ClusterIP
  selector:
    app: redis
