k8s/redis/redis-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: "redis"
  ingress:
  - ports:
    - protocol: TCP
      port: 6379
    from:
    - podSelector:
        matchLabels:
          app: "api"
